fix: Integrate PostCSS CLI into frontend build process

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "postcss src/index.css -o src/tailwind.css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,8 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "@tailwindcss/postcss": "^4.1.11"
+    "postcss-cli": "^11.0.1"
   }
 }
